Improve nav contrast and fix category filtering

--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -106,7 +106,7 @@ aside {
         }
         &.active {
             color: $theme-primary !important;
-            text-shadow: 0 0 1px $theme-primary;
+            text-shadow: 0 0 5px rgba(255, 255, 255, 0.8);
             font-weight: 900 !important;
         }
     }
